--- a/world_manager/config/common_world_mng.yaml
+++ b/world_manager/config/common_world_mng.yaml
@@ -5,4 +5,4 @@ world_manager :
     postgres_ip: "172.17.0.3"
     postgres_port: "5432"
     broadcast_tf_period: 2
-    re_create_db: true
+    re_create_db: false
